<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.photo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>

    <fragment
        android:id="@+id/wallpaperFragment"
        android:name="com.example.photo.ui.wallpaper.WallpaperFragment"
        android:label="@string/title_wallpapers"
        tools:layout="@layout/fragment_wallpaper">
        <action
            android:id="@+id/action_wallpaperFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/popularFragment"
        android:name="com.example.photo.ui.popular.PopularFragment"
        android:label="@string/title_popular"
        tools:layout="@layout/fragment_popular">
        <action
            android:id="@+id/action_popularFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.example.photo.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover">
        <action
            android:id="@+id/action_discoverFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/photoDetailFragment"
        android:name="com.example.photo.ui.detail.PhotoDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_photo_detail">
        <argument
            android:name="photoId"
            app:argType="string" />
        <argument
            android:name="photo"
            app:argType="com.example.photo.domain.model.Photo"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.photo.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.photo.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_photoDetailFragment"
            app:destination="@id/photoDetailFragment" />
    </fragment>

</navigation>
